; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid45.c_wake_do_raid_delayed.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/md/extr_dm-raid45.c_wake_do_raid_delayed.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.raid_set = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i32, i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.raid_set*, i64)* @wake_do_raid_delayed to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @wake_do_raid_delayed(%struct.raid_set* %0, i64 %1) #0 {
  %3 = alloca %struct.raid_set*, align 8
  %4 = alloca i64, align 8
  store %struct.raid_set* %0, %struct.raid_set** %3, align 8
  store i64 %1, i64* %4, align 8
  %5 = load %struct.raid_set*, %struct.raid_set** %3, align 8
  %6 = getelementptr inbounds %struct.raid_set, %struct.raid_set* %5, i32 0, i32 0
  %7 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load %struct.raid_set*, %struct.raid_set** %3, align 8
  %10 = getelementptr inbounds %struct.raid_set, %struct.raid_set* %9, i32 0, i32 0
  %11 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %10, i32 0, i32 0
  %12 = load i64, i64* %4, align 8
  %13 = call i32 @queue_delayed_work(i32 %8, i32* %11, i64 %12)
  ret void
}

declare dso_local i32 @queue_delayed_work(i32, i32*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
